# edge-ai-libraries

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
libraries/dl-streamer/src/base/openvino_inference_backend/: CMakeLists.txt
libraries/dl-streamer/src/openvino/openvino_inference/: CMakeLists.txt  openvino_inference.cpp
libraries/edge-control-libraries/fieldbus/ecat-enablekit/: configure.ac
libraries/edge-control-libraries/fieldbus/ecat-enablekit/examples/: Makefile.am
libraries/edge-control-libraries/fieldbus/ecat-enablekit/libecat/: Makefile.am  motionentry.c  motionentry.h
libraries/edge-control-libraries/fieldbus/robotmctask/: CMakeLists.txt  LICENSE  README.md  find_libshm.cmake
libraries/edge-control-libraries/fieldbus/robotmctask/docs/: introduction.md
libraries/edge-control-libraries/fieldbus/robotmctask/examples/: CMakeLists.txt  mc_rl_sample.cpp
libraries/edge-control-libraries/fieldbus/robotmctask/mc/: CMakeLists.txt  ImuState.h  JointState.h  RotationTools.h  Types.h
libraries/robotics-ai-libraries/motion-control-gateway/humanoid_robot/ti5robot/: CMakeLists.txt  package.xml
microservices/model-download/: .gitignore  README.md  pyproject.toml
microservices/model-download/chart/: Chart.yaml  values.yaml
microservices/model-download/chart/templates/: deployment.yaml  pvc.yaml  service.yaml
microservices/model-download/docker/: .dockerignore  Dockerfile  compose.yaml  entrypoint.sh
microservices/model-download/docs/user-guide/: Overview.md  build-from-source.md  deploy-with-helm.md  get-started.md  release-notes.md  system-requirements.md
microservices/model-download/scripts/: run_service.sh  vlm_compress_model.sh
microservices/model-download/src/api/: main.py  models.py
microservices/model-download/src/core/: interfaces.py  model_manager.py  plugin_registry.py
microservices/model-download/src/plugins/: __init__.py  huggingface_plugin.py  ollama_plugin.py  openvino_plugin.py  ultralytics_plugin.py
microservices/model-download/src/utils/: helper.py  logging.py
microservices/model-download/tests/: conftest.py
microservices/model-download/tests/unit/: test_convert_ovms.py  test_model_download.py  test_model_manager.py  test_vlm_utils.py
microservices/multilevel-video-understanding/: .gitignore  README.md  pyproject.toml  setup_docker.sh
microservices/multilevel-video-understanding/docker/: Dockerfile  compose.yaml
microservices/multilevel-video-understanding/docs/user-guide/: Overview.md  api-reference.md  get-started.md  how-to-build-from-source.md  index.rst  release-notes.md  system-requirements.md
microservices/multilevel-video-understanding/video_analyzer/: main.py
microservices/multilevel-video-understanding/video_analyzer/api/: router.py
microservices/multilevel-video-understanding/video_analyzer/core/: prompts.py  settings.py  summarizer.py
microservices/multilevel-video-understanding/video_analyzer/model_serving/: __init__.py  openai_llm.py  openai_vlm.py
microservices/multilevel-video-understanding/video_analyzer/schemas/: state.py  summarization.py
microservices/multilevel-video-understanding/video_analyzer/utils/: file_utils.py  logger.py  summarization_utils.py
microservices/multimodal-embedding-serving/: .gitignore  README.md  __init__.py  app.py  pyproject.toml  setup.sh
microservices/multimodal-embedding-serving/docker/: .dockerignore  Dockerfile  compose.yaml
microservices/multimodal-embedding-serving/docs/user-guide/: Overview.md  get-started.md  how-to-build-from-source.md  index.rst  release-notes.md  sdk-usage.md  supported-models.md  system-requirements.md  wheel-installation.md
microservices/multimodal-embedding-serving/examples/: README.md  sdk_examples.py  server_examples.py
microservices/multimodal-embedding-serving/src/: __init__.py  app.py  common.py  utils.py  wrapper.py
microservices/multimodal-embedding-serving/src/embedding_models/: __init__.py  qwen.py  vclip.py
microservices/multimodal-embedding-serving/src/models/: __init__.py  base.py  config.py  registry.py
microservices/multimodal-embedding-serving/src/sample/: __init__.py  create_sample.py
microservices/multimodal-embedding-serving/src/utils/: __init__.py  common.py  utils.py
microservices/vlm-openvino-serving/: .dockerignore  .gitignore  README.md  pyproject.toml
microservices/vlm-openvino-serving/docker/: Dockerfile  compose.yaml
microservices/vlm-openvino-serving/docs/user-guide/: api-reference.md  get-started.md  how-to-build-from-source.md
microservices/vlm-openvino-serving/scripts/: compress_model.sh
microservices/vlm-openvino-serving/src/: app.py
sample-applications/chat-question-and-answer/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  setup.sh
sample-applications/chat-question-and-answer/app/: chain.py  custom_reranker.py  server.py
sample-applications/chat-question-and-answer/chart/: Chart.yaml  values.yaml
sample-applications/chat-question-and-answer/chart/templates/: egaisample-deployment.yaml  nginx-deployment.yaml
sample-applications/chat-question-and-answer/deployment-package/: application.yaml  chatqna-values-ovms.yaml  chatqna-values-tgi.yaml  chatqna-values-vllm.yaml  deployment-package.yaml
sample-applications/chat-question-and-answer/docs/user-guide/: api-reference.md  build-from-source.md  deploy-with-edge-orchestrator.md  deploy-with-helm.md  get-started.md  index.rst  overview-architecture.md  overview.md  release-notes.md  system-requirements.md
sample-applications/chat-question-and-answer/tests/unit_tests/: README.md
sample-applications/chat-question-and-answer/ui/react/: .npmrc  Dockerfile  env.sh  index.html  nginx.conf  package-lock.json  package.json
sample-applications/video-search-and-summarization/search-ms/: config.yaml  pyproject.toml  server.py
sample-applications/video-search-and-summarization/search-ms/docker/: Dockerfile
sample-applications/video-search-and-summarization/search-ms/docs/: SCORING_MECHANISM.md
sample-applications/video-search-and-summarization/search-ms/scripts/: recompute_aggregate_scores.py
(+1290 files in other folders)
