# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "multimodal-embedding-serving"
version = "0.1.1"
description = "The MultiModal Embedding serving is designed to generate embeddings for text, image URLs, base64 encoded images, video URLs, and base64 encoded videos. It leverages the CLIP (Contrastive Language-Image Pretraining) model to create these embeddings."
authors = []
readme = "README.md"
packages = [{include = "src", to = "multimodal_embedding_serving"},{include = "__init__.py", to = "multimodal_embedding_serving"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
gunicorn = "^23.0.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
opencv-python = "^4.11.0.86"
einops = "^0.8.1"
decord = "^0.6.0"
transformers = "^4.53.3"
openvino = "^2025.3.0"
optimum-intel = "^1.26.0"
httpx = "0.27.2"
timm = "1.0.19"
cn-clip = "1.6.0"
open-clip-torch = "^3.1.0"
nncf = "^2.18.0"
numpy = { version = ">=2.1.0", source = "pytorch-cpu" }
torch = { version = "==2.8.0", source = "pytorch-cpu" }
torchvision = { version = "==0.23.0", source = "pytorch-cpu" }

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"