[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uvicorn = ">=0.21.0,<0.23.0"
langchain = "^0.3.9"
langchain-community = "^0.3.9"
langchain_postgres = "^0.0.13"
langchain_openai = "^0.3.5"
psycopg-binary = "3.2.3"
asyncpg = "^0.30.0"
fastapi = "0.116.1"
opentelemetry-sdk = "1.27.0"
opentelemetry-instrumentation-fastapi = "0.48b0"
openlit = "1.33.8"
httpx = "0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
