
[tool.poetry]
name = "video-search"
version = "0.1.0"
description = "Video Search Microservice"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
gunicorn = "^23.0.0"
langchain-core = "^0.3.63"
langchain-community = "0.3.27"
langchain-vdms = "^0.1.4"
watchdog = "6.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"