
[tool.poetry]
name = "video-search"
version = "0.1.0"
description = "Video Search Microservice"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
gunicorn = "^23.0.0"
langchain-community = "0.4.1"
langchain-core = "^1.1.0"
langchain-vdms = "^0.2.0"
watchdog = "6.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"